--- a/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/certificate-pdf/certificate-pdf.component.html
@@ -13,7 +13,7 @@
 
     <div id="myDiv">
         @if (aplicanteData.categoria === 'COMERCIAL') {
-        <div class="max-w-2xl mx-auto bg-white text-black p-2 rounded shadow-lg border relative mt-10"
+        <div class="w-full mx-auto bg-white text-black p-2 rounded shadow-lg border relative mt-10"
             style="border: 6px solid #db2828;">
 
             <div class="rounded max-h-screen" style="border: 6px solid #f5c60e;">
@@ -31,7 +31,7 @@
 
                 <!-- Certificate Body -->
                 <div class="mt-8 text-base p-6">
-                    <div class="mb-3 font-bold text-4xl">N.º <span class="font-normal">
+                    <div class="mb-3 font-bold text-2xl">N.º <span class="font-normal">
                             {{aplicanteData.numero}}
                         </span></div>
                     <p class="mb-6">
